# DuckType

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
assets/: ast.css  ast.js
examples/: a.ss  array.ss  b.ss  bench_diff.rb  benchmarks.rb  benchmarks.ss  builtin.ss  chain.ss  class.ss  closure.ss  cplx_chain.ss  dependant.ss  dependency_b.ss  dependency_c.ss  dylib.ss  expr.ss  fastmath.ss  fn.ss  fn_obj.ss  for.ss  if.ss  lambda.ss  let_global.ss  let_local.ss  lib.ss  lib1.ss  lib2.ss  list.ss  load.ss  local_recursion.ss  loop.ss  match.ss  math.ss  method.ss  module.ss  nested_fns.ss  nested_obj.ss  obj.ss  playground.ss  req.ss  (+8 more)
examples/arbitrary/: benchmarks.ss  c.dk  call.ss  chain.ss  classmod.dk  dependant.ss  dependency_a.ss  dependency_c.ss  fib.dk  fib.ss  lambda.dk  math.dk  method.dk  module.dk  module.ss  operator.dk  operator.ss  other_module.dk  playground.dk  playground.ss  scratchpad.dk  scratchpad.ss  simple_fib.dk  simple_fib.ss  smpl_chain.ss  str.ss  struct.dk  syntaxerr.ss  test1.dk  test1.ss  test_module.dk  test_module.ss  util.dk  util.ss
examples/benchmarks/: bench_diff.rb  benchmarks.dk  benchmarks.lua  benchmarks.py  benchmarks.rb  benchmarks.ss  call.dk  call.ss
examples/comp/: duck.dk  ruby.rb
examples/example_module/: Cargo.toml
examples/example_module/src/: lib.rs
examples/lib/: ansi.ss  time.ss
examples/lib/ansi/: color.ss  common.ss  cursor.ss  display.ss  text.ss
examples/programs/: conway.dk  conway.ss
examples/ss_module/: Cargo.toml
examples/ss_module/src/: lib.rs
extensions/ducktype-syntax-hilights/: Makefile  README.md  package-lock.json  package.json  substituter.rb
extensions/ducktype-syntax-hilights/syntaxes/: DuckType.tmLanguage.yaml
extensions/simplescript-syntax-highlights/: Makefile  substituter.rb
extensions/simplescript-syntax-highlights/syntaxes/: simplescript.tmLanguage.yaml
lib/: clock.dk  clock.ss
macros/: Cargo.toml
macros/src/: common.rs  lib.rs  native_types.rs  user_types.rs
macros/tests/: user.rs
macros/tests/pass/: valid.rs
src/: bindings.rs  builtin.rs  c.rs  code.rs  dbg.rs  error.rs  exec.rs  lib.rs  main.rs  memory.rs  out.rs  perf.rs  ptr.rs  stdlib.rs  test.rs  tests.rs  types.rs  util.rs  value.rs
src/code/: ast.rs  bytecode.rs  gen.rs  lex.rs  opt.rs  parse.rs
src/code/ast/: expr.rs  opt.rs  stmt.rs
src/code/ast/expr/: literals.rs  ops.rs
src/code/ast/stmt/: actions.rs  control.rs  decl.rs
src/code/lex/: all_tokens.ss  consecutive_tokens.ss  scanning_errors.ss  test.rs
src/code/lex/test_scripts/: all_tokens.dk  scanning_errors.dk
src/code/parse/: test.rs
src/code/test/: parser.rs
src/cpp/: .clang-format  lib.cpp  lib.hpp  opcode.hpp
src/exec/: env.rs  memory.rs
src/memory/: tests.rs
src/stdlib/: libconsole.rs  libenv.rs  libio.rs  libps.rs  libstr.rs  libstring.rs  libtime.rs
src/types/: test.rs
src/types/test/: value.rs
src/util/: strproc.rs  unix.rs  windows.rs
src/value/: builtin_types.rs  conv.rs  tags.rs  test.rs
src/value/builtin_types/: array.rs  array_value.rs  class.rs  class_value.rs  closure.rs  closure_value.rs  error.rs  error_value.rs  function.rs  function_value.rs  id_value.rs  instance.rs  instance_value.rs  method.rs  method_value.rs  module_value.rs  native.rs  native_value.rs  string.rs  string_value.rs  struct.rs  struct_value.rs  timestamp.rs  timestamp_value.rs  vec_value.rs
tests/: api_tests.rs  boolean.ss  math.ss  script_tests.rs
tests/scripts/: arrays.dk  arrays.ss  assignment.dk  assignment.ss  boolean.dk  boolean.ss  cache.dk  cache.ss  class.dk  closure.dk  closure.ss  control.dk  control.ss  fn_ordering.dk  fn_ordering.ss  is.dk  match.dk  match.ss  math.dk  math.ss  misc.dk  mod.dk  mod.ss  obj.dk  obj.ss  req.dk
tests/util/: req_test.dk
tests/util/cache_test/: dependent_a.dk  dependent_a.ss  dependent_b.ss  module.ss
workspace/ast/: Cargo.toml
workspace/ast/src/: expr.rs  lib.rs  opt.rs  stmt.rs
workspace/ast/src/expr/: literals.rs  ops.rs
workspace/ast/src/stmt/: actions.rs  control.rs  decl.rs
workspace/builtins/: Cargo.toml
workspace/builtins/src/: class_value.rs  function_value.rs  instance_value.rs  lib.rs  module_value.rs  native_value.rs  string_value.rs  struct_value.rs  vec_value.rs
workspace/bytecode/src/: lib.rs
workspace/common/: Cargo.toml
workspace/common/src/: errors.rs  lib.rs  reflect.rs  util.rs  value.rs
workspace/common/src/util/: strproc.rs
workspace/common/src/value/: conv.rs  tags.rs  test.rs  types.rs
workspace/lex/: Cargo.toml
workspace/lex/src/: lib.rs  test.rs
workspace/lex/src/test_scripts/: token_meta_test.dk
workspace/macros/: .gitignore  Cargo.toml
workspace/macros/src/: bindings.rs  lib.rs  native_types.rs
