[package]
name = "DuckType"
version = "0.54.0"
authors = ["Jonathan Dickert <jonathan.dickert@protonmail.com>"]
edition = "2021"
default-run = "duck"

[workspace]
members = [
  ".",
  "workspace/common",
  "workspace/lex",
  "workspace/ast",
  "workspace/bytecode",
  "workspace/macros",
]

[[bin]]
name = "duck"
path = "src/main.rs"

[lib]
name = "ducktype"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"
uuid = { version = "1.4", features = ["v4", "macro-diagnostics"] }

# Git
ptr = { git = "https://github.com/GodOfProgramming/ptr.git" }
tfix = { git = "https://github.com/GodOfProgramming/tfix" }

[dependencies]

# Workspace
common = { path = "workspace/common" }
lex = { path = "workspace/lex" }
ast = { path = "workspace/ast" }
macros = { path = "workspace/macros" }

# Shared
anyhow = { workspace = true }
ptr = { workspace = true }
regex = { workspace = true }
tfix = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

# Crates.io
ahash = "0.8"
bimap = "0.6"
clap = { version = "4.4", features = ["derive"] }
dlopen2 = "0.6"
enum-map = "2.7"
horrorshow = "0.8"
itertools = "0.11"
once_cell = "1.18"
rand = "0.8"
rustyline = "12.0"
shellwords = "1.1"
static_assertions = "1.1"
strum = "0.25"
strum_macros = "0.25"
sysinfo = "0.29"
termion = "2.0"

pprof = { version = "0.13", features = ["flamegraph"] }
tokio = { version = "1.33", features = ["full"] }
interpolator = "0.5"

[dev-dependencies]
pretty_assertions = "1.4"
evalexpr = "11.1"

[build-dependencies]
bindgen = "0.69"
cc = "1.0"

[profile.release]
strip = true
lto = true

[features]
visit-ast = []
disassemble = []
runtime-disassembly = []
print-precedence = []
quit-after-disassemble = []
jtbl = []
check-opcodes = []

[target.'cfg(unix)'.features]
profile = []
