[package]
name = "ducktype"
version = "0.58.0"
authors = ["Jonathan Dickert <jonathan.dickert@protonmail.com>"]
edition = "2024"
rust-version = "1.85.1"
default-run = "dk"

[workspace]
members = [".", "macros"]

[[bin]]
name = "dk"
path = "src/main.rs"

[lib]
name = "ducktype"

[workspace.dependencies]
uuid = { version = "1.16.0", features = ["v4", "macro-diagnostics"] }

[dependencies]
ahash = "0.8.11"
anyhow = "1.0.97"
bimap = "0.6.3"
chrono = { version = "0.4.40", optional = true }
clap = { version = "4.5.35", features = ["derive"] }
dlopen2 = "0.7.0"
enum-map = "2.7.3"
interpolator = "0.5"
itertools = "0.14.0"
lazy-regex = "3.4.1"
nohash-hasher = "0.2.0"
once_cell = "1.21.3"
rand = "0.9.0"
regex = "1.11.1"
rustyline = "15.0.0"
serde = { version = "1.0.219", features = ["derive"] }
shellwords = "1.1.0"
static_assertions = "1.1.0"
strum = "0.27.1"
strum_macros = "0.27.1"
sysinfo = "0.34.1"
thiserror = "2.0.12"
uuid = { workspace = true }

profiling = "1.0.16"
tracing = { version = "0.1.41", optional = true }
tracing-subscriber = { version = "0.3.1", optional = true, features = [
  "env-filter",
] }

tracing-tracy = { version = "0.11.0", optional = true, features = [
  "flush-on-exit",
] }
tracy-client = { version = "0.18.0", optional = true }
tracing-chrome = { version = "0.7.2", optional = true }

# Git

ptr = { git = "https://github.com/GodOfProgramming/ptr.git", rev = "a0bc545" }
tfix = { git = "https://github.com/GodOfProgramming/tfix", rev = "0165153" }

# Local

macros = { path = "macros" }

[dev-dependencies]
pretty_assertions = "1.4.1"
evalexpr = "12.0.2"

[build-dependencies]
bindgen = "0.71.1"
cc = "1.2.17"

[profile.release]
strip = true
lto = true
opt-level = 2

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = [
  "Win32_Storage_FileSystem",
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Console",
] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29.0", features = ["fs"] }
termion = "4.0.5"

[features]
profiling = [
  "profiling/profile-with-tracing",
  "dep:tracing",
  "dep:tracing-subscriber",
]
tracing-tracy = ["profiling", "dep:tracing-tracy", "dep:tracy-client"]
tracing-chrome = ["profiling", "dep:tracing-chrome", "dep:chrono"]

disassemble = []
runtime-disassembly = []
print-precedence = []
quit-after-disassemble = []
jtbl = []
check-opcodes = []
